--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.19.1",
