--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "lucide-react": "^0.544.0",
     "mongoose": "^8.19.1",
     "next": "15.5.4",
+    "nodemailer": "^7.0.10",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
